Added product page and linked it in index.html

--- a/product.html
+++ b/product.html
@@ -1,5 +1,49 @@
-<nav>
-  <a href="index.html">Home</a>
-  <a href="product.html">Products</a>
-  <a href="contact.html">Contact</a>
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Specsbuy - Product Page</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Specsbuy</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="product.html">Products</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <h2>Our Glasses Collection</h2>
+    <div class="product-container">
+      <div class="product-card">
+        <img src="https://images.unsplash.com/photo-1583394838336-acd977736f90" alt="Classic Glasses">
+        <h3>Classic Glasses</h3>
+        <p>₹1200</p>
+        <button>Add to Cart</button>
+      </div>
+
+      <div class="product-card">
+        <img src="https://images.unsplash.com/photo-1606813902919-22d00a2a5d1e" alt="Stylish Glasses">
+        <h3>Stylish Glasses</h3>
+        <p>₹1500</p>
+        <button>Add to Cart</button>
+      </div>
+
+      <div class="product-card">
+        <img src="https://images.unsplash.com/photo-1591076482161-8c2c3388f6df" alt="Blue Ray Glasses">
+        <h3>Blue Ray Glasses</h3>
+        <p>₹1800</p>
+        <button>Add to Cart</button>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <p>© 2025 Specsbuy. All rights reserved.</p>
+  </footer>
+</body>
+</html>
